--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,9 @@
 members = [
     "rai",
     "rai-core",
-    "rai-nn"
+    "rai-nn",
+    "examples/*"
 ]
-
 resolver = "2"
 
 [workspace.package]
@@ -12,3 +12,10 @@ version = "0.1.0"
 edition = "2021"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
+
+[workspace.dependencies]
+candle-core = "0.3.1"
+dyn-clone = "1.0.16"
+once_cell = "1.19.0"
+thiserror = "1.0.51"
+tracing = "0.1.40"
