--- a/rai-core/Cargo.toml
+++ b/rai-core/Cargo.toml
@@ -11,3 +11,8 @@ repository = "https://github.com/cksac/rai"
 homepage = "https://github.com/cksac/rai"
 
 [dependencies]
+candle-core = { workspace = true }
+dyn-clone = { workspace = true }
+once_cell = { workspace = true }
+thiserror = { workspace = true }
+tracing = { workspace = true }
