cargo clippy and fmt

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ version = "0.1.0"
 edition = "2021"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
+categories = ["science"]
 
 [workspace.dependencies]
 candle-core = "0.3.1"
