--- a/rai-nn/Cargo.toml
+++ b/rai-nn/Cargo.toml
@@ -7,6 +7,7 @@ version.workspace = true
 edition.workspace = true
 license.workspace = true
 readme.workspace = true
+categories.workspace = true
 repository = "https://github.com/cksac/rai"
 homepage = "https://github.com/cksac/rai"
 
