--- a/rai/Cargo.toml
+++ b/rai/Cargo.toml
@@ -12,4 +12,4 @@ repository = "https://github.com/cksac/rai"
 homepage = "https://github.com/cksac/rai"
 
 [dependencies]
-rai-core = { version = "0.2.0" }
+rai-core = { path = "../rai-core" }
