refactor transforms to take Module as well

--- a/rai-nn/Cargo.toml
+++ b/rai-nn/Cargo.toml
@@ -12,3 +12,4 @@ repository = "https://github.com/cksac/rai"
 homepage = "https://github.com/cksac/rai"
 
 [dependencies]
+rai = { path = "../rai" }
