--- a/rai/Cargo.toml
+++ b/rai/Cargo.toml
@@ -12,5 +12,5 @@ repository = "https://github.com/cksac/rai"
 homepage = "https://github.com/cksac/rai"
 
 [dependencies]
-rai-core = { path = "../rai-core", version = "0.3.0" }
-rai-nn = { path = "../rai-nn", version = "0.3.0" }
+rai-core = { workspace = true }
+rai-nn = { workspace = true }
