--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,8 @@ license = "MIT OR Apache-2.0"
 categories = ["science"]
 
 [workspace.dependencies]
+rai-core = { path = "rai-core", version = "0.3.0" }
+rai-nn = { path = "rai-nn", version = "0.3.0" }
 candle-core = "0.3.1"
 dyn-clone = "1.0.16"
 once_cell = "1.19.0"
