--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,17 +8,20 @@ members = [
 resolver = "2"
 
 [workspace.package]
-version = "0.3.1"
+version = "0.3.2"
 edition = "2021"
 readme = "README.md"
 license = "MIT OR Apache-2.0"
 categories = ["science"]
 
 [workspace.dependencies]
-rai-core = { path = "rai-core", version = "0.3.0" }
-rai-nn = { path = "rai-nn", version = "0.3.0" }
+rai-core = { path = "rai-core", version = "0.3.2" }
+rai-nn = { path = "rai-nn", version = "0.3.2" }
 candle-core = "0.3.1"
 dyn-clone = "1.0.16"
 once_cell = "1.19.0"
 thiserror = "1.0.51"
 tracing = "0.1.40"
+
+[workspace.metadata.workspaces]
+no_individual_tags = true
