--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ members = [
     "rai",
     "rai-core",
     "rai-nn",
+    "rai-opt",
     "examples/*"
 ]
 resolver = "2"
@@ -17,6 +18,7 @@ categories = ["science"]
 [workspace.dependencies]
 rai-core = { path = "rai-core", version = "0.3.2" }
 rai-nn = { path = "rai-nn", version = "0.3.2" }
+rai-opt = { path = "rai-opt", version = "0.3.2" }
 candle-core = "0.3.1"
 dyn-clone = "1.0.16"
 once_cell = "1.19.0"
