fix softmax jvp and vjp

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,7 +5,9 @@
         "logits",
         "matmul",
         "primals",
+        "relu",
         "rsqrt",
+        "softmax",
         "vjps"
     ],
     "rust-analyzer.linkedProjects": [
