handle keep_dim in reduce_sum

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.words": [
         "Arange",
         "dtype",
+        "keepdim",
         "logits",
         "matmul",
         "primals",
