--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ license = "MIT OR Apache-2.0"
 categories = ["science"]
 
 [workspace.dependencies]
+rai = { path = "rai", version = "0.4.0" }
 rai-core = { path = "rai-core", version = "0.4.0" }
 rai-nn = { path = "rai-nn", version = "0.4.0" }
 rai-opt = { path = "rai-opt", version = "0.4.0" }
@@ -25,6 +26,10 @@ dyn-clone = "1.0.16"
 once_cell = "1.19.0"
 thiserror = "1.0.51"
 tracing = "0.1.40"
+criterion = "0.3"
+tracing-tree = "0.3.0"
+tracing-subscriber = "0.3.18"
+
 
 [workspace.metadata.workspaces]
 no_individual_tags = true
