--- a/examples/mnist/Cargo.toml
+++ b/examples/mnist/Cargo.toml
@@ -10,4 +10,7 @@ publish = false
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rai = { path = "../../rai" }
+rai = { workspace = true }
+tracing = { workspace = true }
+tracing-tree = { workspace = true }
+tracing-subscriber = { workspace = true }
