--- a/rai-core/Cargo.toml
+++ b/rai-core/Cargo.toml
@@ -17,3 +17,4 @@ dyn-clone = { workspace = true }
 once_cell = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
+paste = { workspace = true }
