--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ rai-core = { path = "rai-core", version = "0.5.0" }
 rai-nn = { path = "rai-nn", version = "0.5.0" }
 rai-opt = { path = "rai-opt", version = "0.5.0" }
 candle-core = "0.3.2"
+paste = "1.0"
 dyn-clone = "1.0.16"
 once_cell = "1.19.0"
 thiserror = "1.0.51"
