--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ tracing = "0.1.40"
 criterion = "0.3"
 tracing-tree = "0.3.0"
 tracing-subscriber = "0.3.18"
+colored = "2.1.0"
 
 
 [workspace.metadata.workspaces]
