--- a/rai-core/Cargo.toml
+++ b/rai-core/Cargo.toml
@@ -18,3 +18,4 @@ once_cell = { workspace = true }
 thiserror = { workspace = true }
 tracing = { workspace = true }
 paste = { workspace = true }
+colored = { workspace = true }
