- add index_select -  add phi2 example draft

--- a/examples/phi2/Cargo.toml
+++ b/examples/phi2/Cargo.toml
@@ -9,3 +9,4 @@ categories.workspace = true
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+rai = { workspace = true }
