- add var ops - add LayerNorm

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,9 +1,12 @@
 {
     "cSpell.words": [
         "Arange",
+        "ddof",
         "dtype",
+        "Gelu",
         "jvps",
         "keepdim",
+        "layernorm",
         "logits",
         "matmul",
         "mnist",
