--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,17 +21,25 @@ rai-core = { path = "rai-core", version = "0.6.0" }
 rai-nn = { path = "rai-nn", version = "0.6.0" }
 rai-opt = { path = "rai-opt", version = "0.6.0" }
 safetensors = "0.3.1"
-candle-core = "0.3.2"
+candle-core = { version = "0.3.2" }
 paste = "1.0"
 dyn-clone = "1.0.16"
 once_cell = "1.19.0"
 thiserror = "1.0.51"
-tracing = "0.1.40"
 criterion = "0.3"
+tracing = "0.1.40"
 tracing-tree = "0.3.0"
 tracing-subscriber = "0.3.18"
 colored = "2.1.0"
+tokenizers = { version = "0.15.0", features = ["onig"] }
+clap = { version = "4.2.4", features = ["derive"] }
+hf-hub = "0.3.0"
+serde = { version = "1.0.171", features = ["derive"] }
+serde_json = "1.0.99"
 
+[profile.release-with-debug]
+inherits = "release"
+debug = true
 
 [workspace.metadata.workspaces]
 no_individual_tags = true
