--- a/examples/phi2/Cargo.toml
+++ b/examples/phi2/Cargo.toml
@@ -10,3 +10,11 @@ categories.workspace = true
 
 [dependencies]
 rai = { workspace = true }
+tokenizers = { workspace = true }
+clap = { workspace = true }
+hf-hub = { workspace = true }
+serde = { workspace = true }
+serde_json = { workspace = true }
+tracing = { workspace = true }
+tracing-tree = { workspace = true }
+tracing-subscriber = { workspace = true }
