add rai-models and rai-datasets

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,7 +6,9 @@
         "ddof",
         "dtype",
         "endoftext",
+        "freqs",
         "Gelu",
+        "headdim",
         "jvps",
         "keepdim",
         "layernorm",
