--- a/examples/phi2/Cargo.toml
+++ b/examples/phi2/Cargo.toml
@@ -5,8 +5,7 @@ edition.workspace = true
 readme.workspace = true
 license.workspace = true
 categories.workspace = true
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+publish = false
 
 [dependencies]
 rai = { workspace = true }
@@ -15,6 +14,4 @@ clap = { workspace = true }
 hf-hub = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
-tracing = { workspace = true }
-tracing-tree = { workspace = true }
-tracing-subscriber = { workspace = true }
+
