--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,6 @@ Cargo.lock
 # MSVC Windows builds of rustc generate these, which store debugging information
 *.pdb
 
+flamegraph.svg
 *.safetensors
 *.log
