--- a/Cargo.toml
+++ b/Cargo.toml
@@ -41,6 +41,9 @@ clap = { version = "4.2.4", features = ["derive"] }
 hf-hub = "0.3.0"
 serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.99"
+half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
+num-traits = "0.2.17"
+
 
 [profile.release-with-debug]
 inherits = "release"
