--- a/rai-core/Cargo.toml
+++ b/rai-core/Cargo.toml
@@ -12,7 +12,8 @@ repository = "https://github.com/cksac/rai"
 homepage = "https://github.com/cksac/rai"
 
 [dependencies]
-half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
+half = { workspace = true }
+num-traits = { workspace = true }
 safetensors = { workspace = true }
 candle-core = { workspace = true }
 dyn-clone = { workspace = true }
@@ -21,3 +22,5 @@ thiserror = { workspace = true }
 tracing = { workspace = true }
 paste = { workspace = true }
 colored = { workspace = true }
+
+
