--- a/rai-core/Cargo.toml
+++ b/rai-core/Cargo.toml
@@ -15,7 +15,7 @@ homepage = "https://github.com/cksac/rai"
 half = { workspace = true }
 num-traits = { workspace = true }
 safetensors = { workspace = true }
-candle-core = { workspace = true }
+candle-core = { workspace = true, optional = true }
 dyn-clone = { workspace = true }
 once_cell = { workspace = true }
 thiserror = { workspace = true }
@@ -23,4 +23,11 @@ tracing = { workspace = true }
 paste = { workspace = true }
 colored = { workspace = true }
 
-
+[features]
+default = ["candle-backend"]
+candle-backend = ["candle-core"]
+cuda = ["candle-core?/cuda"]
+cudnn = ["candle-core?/cudnn"]
+mkl = ["candle-core?/mkl"]
+accelerate = ["candle-core?/accelerate"]
+metal = ["candle-core?/metal"]
