--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
         "Arange",
         "argmax",
         "argmin",
+        "clippy",
         "consts",
         "Cuda",
         "ddof",
@@ -25,6 +26,8 @@
         "recip",
         "relu",
         "rsqrt",
+        "Rustfmt",
+        "rustup",
         "safetensor",
         "safetensors",
         "seqlen",
