--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Build
       run: cargo build --verbose
     - name: Run tests
-      run: cargo test --all-features --verbose
+      run: cargo test --verbose
   fmt:
     name: Rustfmt
     runs-on: ubuntu-latest
