--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ members = [
     "examples/*"
 ,
     "rai-models",
-    "rai-datasets"]
+    "rai-datasets",
+    "rai-derive"]
 
 resolver = "2"
 
@@ -25,6 +26,7 @@ rai-nn = { path = "rai-nn", version = "0.7.0" }
 rai-opt = { path = "rai-opt", version = "0.7.0" }
 rai-models = { path = "rai-models", version = "0.7.0" }
 rai-datasets = { path = "rai-datasets", version = "0.7.0" }
+rai-derive = { path = "rai-derive", version = "0.7.0" }
 safetensors = "0.3.1"
 candle-core = { version = "0.3.2" }
 paste = "1.0"
