--- a/rai/Cargo.toml
+++ b/rai/Cargo.toml
@@ -15,6 +15,7 @@ homepage = "https://github.com/cksac/rai"
 rai-core = { workspace = true }
 rai-nn = { workspace = true }
 rai-opt = { workspace = true }
+rai-derive = { workspace = true }
 hf-hub = { workspace = true }
 serde_json = { workspace = true }
 
