--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ rai-datasets = { path = "rai-datasets", version = "0.8.0" }
 rai-derive = { path = "rai-derive", version = "0.8.0" }
 safetensors = "0.4.1"
 candle-core = { version = "0.3.3" }
+candle-flash-attn = { version = "0.3.3" }
 paste = "1.0"
 dyn-clone = "1.0.16"
 once_cell = "1.19.0"
