move phi2 model to rai-models

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,12 +16,14 @@
         "jvps",
         "keepdim",
         "layernorm",
+        "llms",
         "logits",
         "matmul",
         "mnist",
         "nesterov",
         "powf",
         "primals",
+        "qwen",
         "raiexpr",
         "randn",
         "recip",
