--- a/examples/phi2/Cargo.toml
+++ b/examples/phi2/Cargo.toml
@@ -9,6 +9,7 @@ publish = false
 
 [dependencies]
 rai = { workspace = true }
+rai-models = { workspace = true }
 tokenizers = { workspace = true }
 clap = { workspace = true }
 hf-hub = { workspace = true }
