--- a/examples/qwen2/Cargo.toml
+++ b/examples/qwen2/Cargo.toml
@@ -5,8 +5,7 @@ edition.workspace = true
 readme.workspace = true
 license.workspace = true
 categories.workspace = true
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+publish = false
 
 [dependencies]
 rai = { workspace = true }
