--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -34,6 +34,7 @@
         "safetensor",
         "safetensors",
         "seqlen",
+        "silu",
         "simd",
         "softmax",
         "thiserror",
