add gemma model

--- a/rai-nn/Cargo.toml
+++ b/rai-nn/Cargo.toml
@@ -15,6 +15,7 @@ homepage = "https://github.com/cksac/rai"
 rai-core = { workspace = true }
 rai-derive = { workspace = true }
 safetensors = { workspace = true }
+serde = { workspace = true }
 
 [features]
 default = ["candle-backend"]
