- add permute - add vit model

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "argmin",
         "clippy",
         "consts",
+        "Conv",
         "Cuda",
         "ddof",
         "dtype",
@@ -13,6 +14,7 @@
         "freqs",
         "Gelu",
         "headdim",
+        "imageops",
         "jvps",
         "keepdim",
         "layernorm",
@@ -28,6 +30,7 @@
         "randn",
         "recip",
         "relu",
+        "reqwest",
         "rsqrt",
         "Rustfmt",
         "rustup",
