--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,9 @@ serde = { version = "1.0.171", features = ["derive"] }
 serde_json = "1.0.99"
 half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
 num-traits = "0.2.17"
-
+image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
+imageproc = { version = "0.23.0", default-features = false }
+reqwest = { version = "0.11", features = ["blocking", "json"] }
 
 [profile.release-with-debug]
 inherits = "release"
