--- a/Cargo.toml
+++ b/Cargo.toml
@@ -49,6 +49,7 @@ num-traits = "0.2.17"
 image = { version = "0.24.7", default-features = false, features = ["jpeg", "png"] }
 imageproc = { version = "0.23.0", default-features = false }
 reqwest = { version = "0.11", features = ["blocking", "json"] }
+parquet = { version = "50.0.0" }
 
 [profile.release-with-debug]
 inherits = "release"
