--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ thiserror = "1.0.51"
 criterion = "0.3"
 tracing = "0.1.40"
 tracing-tree = "0.3.0"
+tracing-test = "0.1"
 tracing-subscriber = "0.3.18"
 colored = "2.1.0"
 tokenizers = { version = "0.15.0", features = ["onig"] }
