--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ image = { version = "0.24.7", default-features = false, features = ["jpeg", "png
 imageproc = { version = "0.23.0", default-features = false }
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 parquet = { version = "50.0.0" }
+rand = "0.8.5"
 
 [profile.release-with-debug]
 inherits = "release"
