- add check grads for conv, pooling and vision ops - update rand_with and randn_with

--- a/examples/mnist-cnn/Cargo.toml
+++ b/examples/mnist-cnn/Cargo.toml
@@ -11,3 +11,6 @@ publish = false
 rai = { workspace = true }
 rai-datasets = { workspace = true }
 rand = { workspace = true }
+
+[features]
+cuda = ["rai/cuda"]
