--- a/examples/mnist/Cargo.toml
+++ b/examples/mnist/Cargo.toml
@@ -10,3 +10,6 @@ publish = false
 [dependencies]
 rai = { workspace = true }
 rai-datasets = { workspace = true }
+
+[features]
+cuda = ["rai/cuda"]
