- fix candle cuda execution - update inti to advoid to_dtype from f64

--- a/examples/gemma/Cargo.toml
+++ b/examples/gemma/Cargo.toml
@@ -15,3 +15,6 @@ clap = { workspace = true }
 hf-hub = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+
+[features]
+cuda = ["rai/cuda"]
