--- a/examples/qwen2/Cargo.toml
+++ b/examples/qwen2/Cargo.toml
@@ -15,3 +15,6 @@ clap = { workspace = true }
 hf-hub = { workspace = true }
 serde = { workspace = true }
 serde_json = { workspace = true }
+
+[features]
+cuda = ["rai/cuda"]
