--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,6 +34,7 @@ paste = "1.0"
 dyn-clone = "1.0.16"
 once_cell = "1.19.0"
 thiserror = "1.0.51"
+anyhow = { version = "1", features = ["backtrace"] }
 criterion = "0.3"
 tracing = "0.1.40"
 tracing-tree = "0.3.0"
@@ -52,6 +53,7 @@ imageproc = { version = "0.23.0", default-features = false }
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 parquet = { version = "50.0.0" }
 rand = "0.8.5"
+
 
 [profile.release-with-debug]
 inherits = "release"
