fix clippy warning

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,6 +42,7 @@
         "softmax",
         "thiserror",
         "unsqueeze",
+        "varmap",
         "vjps"
     ],
     "rust-analyzer.linkedProjects": [
