update debug location feature name

--- a/rai-core/Cargo.toml
+++ b/rai-core/Cargo.toml
@@ -34,4 +34,4 @@ cudnn = ["candle-core?/cudnn"]
 mkl = ["candle-core?/mkl"]
 accelerate = ["candle-core?/accelerate"]
 metal = ["candle-core?/metal"]
-debug_location = []
+debug-location = []
