--- a/rai/Cargo.toml
+++ b/rai/Cargo.toml
@@ -27,3 +27,4 @@ cudnn = ["rai-core/cudnn", "rai-nn/cudnn", "rai-opt/cudnn"]
 mkl = ["rai-core/mkl", "rai-nn/mkl", "rai-opt/mkl"]
 accelerate = ["rai-core/accelerate", "rai-nn/accelerate", "rai-opt/accelerate"]
 metal = ["rai-core/metal", "rai-nn/metal", "rai-opt/metal"]
+debug-location = ["rai-core/debug-location"]
