--- a/rai-models/Cargo.toml
+++ b/rai-models/Cargo.toml
@@ -14,3 +14,4 @@ homepage = "https://github.com/cksac/rai"
 [dependencies]
 rai = { workspace = true }
 serde = { workspace = true }
+tokenizers = { workspace = true }
