use ptr addr instead running id for tensor id

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Conv",
         "Cuda",
         "ddof",
+        "dprint",
         "dtype",
         "embd",
         "endoftext",
@@ -42,6 +43,7 @@
         "softmax",
         "thiserror",
         "unsqueeze",
+        "upsample",
         "varmap",
         "vjps"
     ],
