--- a/rai-core/Cargo.toml
+++ b/rai-core/Cargo.toml
@@ -24,6 +24,8 @@ tracing = { workspace = true }
 paste = { workspace = true }
 colored = { workspace = true }
 rustc-hash = { workspace = true }
+hf-hub = { workspace = true }
+serde_json = { workspace = true }
 
 [features]
 default = ["candle-backend", "debug-location"]
