--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,9 +27,11 @@ rai-opt = { path = "rai-opt", version = "0.11.0" }
 rai = { path = "rai", version = "0.11.0" }
 rai-models = { path = "rai-models", version = "0.11.0" }
 rai-datasets = { path = "rai-datasets", version = "0.11.0" }
-safetensors = "0.4.1"
-candle-core = { version = "0.4.1" }
-candle-flash-attn = { version = "0.4.1" }
+safetensors = "0.4"
+candle-core = { version = "0.6" }
+candle-flash-attn = { version = "0.6" }
+candle-nn = { version = "0.6" }
+candle-datasets = { version = "0.6" }
 paste = "1.0"
 dyn-clone = "1.0.16"
 once_cell = "1.19.0"
@@ -53,7 +55,7 @@ imageproc = { version = "0.23.0", default-features = false }
 reqwest = { version = "0.11", features = ["blocking", "json"] }
 parquet = { version = "50.0.0" }
 rand = "0.8.5"
-rustc-hash = "1.1.0"
+rustc-hash = "2.0"
 
 [profile.release-with-debug]
 inherits = "release"
